tests/invalid_inputs/parsing/const_method.cpp
// const methods are not implemented
struct S {
	int foo() const {

	}
};
